Add the npm context to publish packages

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,5 +54,6 @@ workflows:
         <<: *build
     - deploy-to-npm:
         <<: *deploy
+        context: npm
         requires:
         - deps-n-test
